# ferry_timetable

./: .env  .flake8  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 00b87a3d94a3_port_ferry_portferry_user_country.py  4c3cbbdcddd4_add_port_dependency.py  8b9d487d1814_add_owner_ferries_relations.py  ed9b9f4777d5_add_language_enum.py
app/: logging.py  main.py  utils.py
app/api/: api.py
app/api/endpoints/: example.py
app/celery_ferry/: tasks.py  worker.py
app/core/: config.py
app/crud/: base.py  crud_country.py  crud_ferry.py  crud_owner.py  crud_port.py  crud_user.py
app/db/: session.py
app/models/: __init__.py  country.py  ferry.py  owner.py  port.py  user.py
app/schemas/: base.py  country_schemas.py  enums.py  ferry_schemas.py  owner_schemas.py  port_schemas.py  user_schemas.py
app/telegtam_bot/: bot.py  keyboard.py
app/telegtam_bot/languages/: lang_eng.json  lang_pl.json  lang_ukr.json
app/tests/: conftest.py  example_test.py
app/tests/fixtures/: base_fixtures.py
app/timetable/: parser.py
requirements/: base.txt  production.txt
